# Blood-Bank-System-

./: README.md
BB/: CMakeLists.txt  RecipientClass.cpp  RecipientClass.h  bloodBankClass.cpp  bloodBankClass.h  bloodClass.cpp  bloodClass.h  bloodRequestPage.cpp  bloodRequestPage.h  bloodRequestPage.ui  bloodTypes.h  bloodbank.cpp  bloodbank.h  bloodbank.ui  donorClass.cpp  donorClass.h  emailClass.cpp  emailClass.h  forgotpassword.cpp  forgotpassword.h  forgotpassword.ui  main.cpp  recipientPage.cpp  recipientPage.h  recipientPage.ui  resources.qrc  sign_up.ui  signin.cpp  signin.h  signin.ui  signup.cpp  signup.ui  user.cpp  user.h  userClass.cpp  userClass.h
Blood Bank/: Blood Bank.sln
Blood Bank/Blood Bank/: Blood Bank.vcxproj  Blood Bank.vcxproj.filters  Source.cpp  user.cpp  user.h
Blood-Bank/: .cpp  CMakeLists.txt  bloodBankClass.cpp  bloodBankClass.h  bloodClass.cpp  bloodClass.h  bloodRequestPage.ui  bloodbank.cpp  bloodbank.h  bloodbank.ui  donorClass.cpp  donorClass.h  donorpage.cpp  donorpage.h  donorpage.ui  forgotpassword.cpp  forgotpassword.h  forgotpassword.ui  handler.cpp  handler.h  main.cpp  recipientPage.cpp  recipientPage.h  recipientPage.ui  resources.qrc  sign_up.ui  signup.cpp  signup.h  signup.ui  user.cpp  user.h
BloodBank/: BloodBank.sln
BloodBank/BloodBank/: BloodBank.cpp  BloodBank.h  BloodBank.vcxproj  BloodBank.vcxproj.filters  Disease.cpp  Disease.h  main.cpp
DSProject_OsamaBranch/: DSProject_OsamaBranch.sln
DSProject_OsamaBranch/DSProject_OsamaBranch/: BloodBankClass.cpp  BloodBankClass.h  BloodClass.cpp  BloodClass.h  DSProject_OsamaBranch.vcxproj  DSProject_OsamaBranch.vcxproj.filters  DateClass.cpp  DateClass.h  DonorClass.h  EmailClass.cpp  EmailClass.h  RecipientClass.cpp  RecipientClass.h  UserClass.cpp  UserClass.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj
QtWidgetsApplication3/: QtWidgetsApplication3.sln
blood bank vidual studio/: blood bank vidual studio.sln
bloodBank/: bloodBank.sln
bloodBank/bloodBank/: bloodBank.h  (+11 more)
bloodBankSystem/: bloodBankSystem.sln
build-BB-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  recipientData.txt
build-Blood-Bank-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  bloodData.txt  build.ninja  cmake_install.cmake  donorData.txt  recipientData.txt
untitled1/: bloodData.txt  donorData.txt  recipientData.txt  ui_donorpage.h  ui_recipientPage.h  ui_sign_up.h  untitled1.pro  untitled1.vcxproj  untitled1.vcxproj.filters
(+142 files in other folders)
